Regression: 'Split Edge' node can cause crash in blender 3.6.3 #112590

Closed
opened 2023-09-19 18:52:15 +02:00 by Germano Cavalcante · 2 comments

System Information
Operating system: Windows-10-10.0.23545-SP0 64 Bits
Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.0 Core Profile Context 23.20.01.04.230725

Blender Version
Broken: version: 3.6.3 Release Candidate, branch: blender-v3.6-release, commit date: 2023-09-15 14:01, hash: 71b55b491e9c
Worked: version: 3.6.3 Release Candidate, branch: blender-v3.6-release, commit date: 2023-09-06 20:19, hash: c8c6f62cf3a3

Short description of error
Detected in #112549 by @end_ahmed
The .blend file used to show the bug crashes as soon as opened in blender 3.6.3.
The problem appears to be on the Split Edge node.

Exact steps for others to reproduce the error

  • Open attached .blend file
  • Unmute Split Edge node.
**System Information** Operating system: Windows-10-10.0.23545-SP0 64 Bits Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.0 Core Profile Context 23.20.01.04.230725 **Blender Version** Broken: version: 3.6.3 Release Candidate, branch: blender-v3.6-release, commit date: 2023-09-15 14:01, hash: `71b55b491e9c` Worked: version: 3.6.3 Release Candidate, branch: blender-v3.6-release, commit date: 2023-09-06 20:19, hash: `c8c6f62cf3a3` **Short description of error** Detected in #112549 by @end_ahmed The .blend file used to show the bug crashes as soon as opened in blender 3.6.3. The problem appears to be on the `Split Edge` node. **Exact steps for others to reproduce the error** - Open attached .blend file - Unmute `Split Edge` node.
Iliya Katushenock added
Type
Bug
and removed
Type
Report
labels 2023-09-19 19:25:12 +02:00
Member

@mano-wii , perhaps caused by backporting f41dc90925 / be2df46afe ?

@mano-wii , perhaps caused by backporting f41dc90925867a0672897723654c67cdda6118e8 / https://projects.blender.org/blender/blender/commit/be2df46afe58a662b2d0308906a9927e72f4629a ?
Pratik Borhade added this to the 3.6 LTS milestone 2023-09-20 05:07:25 +02:00
@HooglyBoogly \
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-09-20 18:43:18 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112590
No description provided.